@@ -988,7 +988,9 @@ static int mov_read_stsd(MOVContext *c, ByteIOContext *pb, MOV_atom_t atom)
 #endif
     /* no ifdef since parameters are always those */
     case CODEC_ID_QCELP:
+        st->codec->frame_size= 160;
         st->codec->channels= 1; /* really needed */
+        break;
     case CODEC_ID_AMR_NB:
     case CODEC_ID_AMR_WB:
         st->codec->frame_size= sc->samples_per_frame;
